# aocc

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt
src/2021/: 2021.c  2021.h  CMakeLists.txt  datastructures.c  datastructures.h  day1.c  day2.c  day3.c  day4.c  day5.c  day6.c  day7.c  day8.c  day9.c  solutions.h
src/2022/: 2022.c  2022.h  CMakeLists.txt  day1.c  solutions.h
src/aoc/: CMakeLists.txt  common.c  common.h  hashmap.c  hashmap.h  input.c  input.h  queue.c  queue.h  ring.c  ring.h  vec.c  vec.h
src/aoc_cli/: CMakeLists.txt  main.c
test/: CMakeLists.txt
test/2021/: CMakeLists.txt  day1_test.c  day2_test.c  day3_test.c  day4_test.c  day5_test.c  day6_test.c  day7_test.c  day8_test.c  day9_test.c
test/2022/: CMakeLists.txt  day1_test.c
test/aoc/: CMakeLists.txt  hashmap_test.c  input_test.c  queue_test.c  ring_test.c  vec_test.c
