add_executable(day1_test day1_test.c)
target_link_libraries(day1_test unity 2021)
add_test(day1_test day1_test)

add_executable(day2_test day2_test.c)
target_link_libraries(day2_test unity 2021)
add_test(day2_test day2_test)

add_executable(day3_test day3_test.c)
target_link_libraries(day3_test unity 2021)
add_test(day3_test day3_test)

add_executable(day4_test day4_test.c)
target_link_libraries(day4_test unity 2021)
add_test(day4_test day4_test)

add_executable(day5_test day5_test.c)
target_link_libraries(day5_test unity 2021)
add_test(day5_test day5_test)
